--- a/public/tracks/manifest.json
+++ b/public/tracks/manifest.json
@@ -41,10 +41,18 @@
       "elevationGain": 6065
     },
     {
+      "file": "LaVerne2SanDimasFireStation-8.geojson",
+      "name": "La Verne to San Dimas Fire Station - Hills 8",
+      "location": "La Verne, CA",
+      "description": "Street route from La Verne up San Dimas Fire Station and routes back.",
+      "distance": 7.95,
+      "elevationGain": 1642
+    },
+    {
       "file": "La_Verne_to_Potato_Mtn_20.geojson",
-      "name": "LaVerne2PotatoMtn20",
-      "location": "",
-      "description": "",
+      "name": "La Verne to Potato Mountain via Marshall Canyon, Claremont Hills - 20 miles",
+      "location": "Claremont, CA",
+      "description": "Through Marshall Canyon route but goes further to Potato Mountain then down to the Pagoda. Distance (mi): 19.31, Ascent (ft): 2170",
       "distance": 19.31,
       "elevationGain": 2170
     },
