add peak and tracks around La Verne (#98)
* fix: add Safari-specific GPS button positioning

- Use CSS @supports to detect Safari via -webkit-touch-callout
- Safari gets 120px bottom spacing (Brave/Chrome gets 80px)
- Desktop stays at 24px via media query
- Accounts for iPhone notch/home indicator with safe-area-inset
- Part of #84

* update gps button layout

* added home2teepee gpx and geojson

* fixes bug: Fix gpx-to-geojson.cjx to all output directory #80

* added home2brn mtn.

* added Brown Mtn peak and made a helper peak adding script #95

* updated peaks added La Verne tracks

---------

Co-authored-by: jtorres <jay@jpl.nasa.gov>

--- a/public/tracks/manifest.json
+++ b/public/tracks/manifest.json
@@ -42,9 +42,9 @@
     },
     {
       "file": "La_Verne_to_Potato_Mtn_20.geojson",
-      "name": "LaVerne2PotatoMtn20",
-      "location": "",
-      "description": "",
+      "name": "La Verne to Potato Mountain via Marshall Canyon, Claremont Hills - 20 miles",
+      "location": "Claremont, CA",
+      "description": "Through Marshall Canyon route but goes further to Potato Mountain then down to the Pagoda. Distance (mi): 19.31, Ascent (ft): 2170",
       "distance": 19.31,
       "elevationGain": 2170
     },
